--- a/assets/css/cbxgooglemap-block.css
+++ b/assets/css/cbxgooglemap-block.css
@@ -1,1 +1,1 @@
-.cbxgooglemap_block_note{font-size:13px}.cbxgooglemap_block_note:before{content:"";display:inline-block;-webkit-font-smoothing:antialiased;font:normal 15px/1 "dashicons";vertical-align:middle}
+.cbxgooglemap_block_note{font-size:13px}.cbxgooglemap_block_note:before{content:"";display:inline-block;-webkit-font-smoothing:antialiased;font:15px/1 "dashicons";vertical-align:middle}
