--- a/assets/css/cbxgooglemap-elementor.css
+++ b/assets/css/cbxgooglemap-elementor.css
@@ -1,1 +1,1 @@
-.cbxmap-icon{position:relative}.cbxmap-icon:before{content:" ";background-image:url("../images/map.png");width:26px;height:26px;display:block;background-size:contain;background-repeat:no-repeat;margin:0 auto}
+.cbxmap-icon{position:relative}.cbxmap-icon:before{content:" ";background-image:url(../images/map.png);width:26px;height:26px;display:block;background-size:contain;background-repeat:no-repeat;margin:0 auto}
